# a-share-multifactor-research

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config_baostock.yaml  config_csv.yaml.example  config_demo.yaml  config_level3_demo.yaml  config_tushare.yaml
docs/: baostock_result_analysis.md  baostock_usage.md  data_schema.md  level3_research_upgrade.md  methodology.md  resume_bullets.md  tushare_usage.md
notebooks/: 01_data_cleaning.ipynb  02_factor_analysis.ipynb  03_backtest_result.ipynb
scripts/: fetch_baostock_data.py  fetch_tushare_data.py  run_baostock_backtest.py  run_demo.py  run_level3_tushare_backtest.py  run_tushare_backtest.py
src/mf_strategy/: __init__.py  backtest.py  cli.py  config.py  data_loader.py  demo_data.py  factor_engine.py  factor_preprocess.py  factor_test.py  market_regime.py  ml_alpha.py  performance.py  portfolio.py  report.py  tushare_loader.py  visualization.py
tests/: test_pipeline.py
