[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a-share-multifactor-backtest"
version = "0.1.0"
description = "A-share multi-factor stock selection research and backtesting framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
  "pandas>=2.2",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  "scipy>=1.10",
  "tqdm>=4.66",
  "tabulate>=0.9",
  "tushare>=1.4.0",
  "baostock>=0.8.8",
  "scikit-learn>=1.4"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jupyter>=1.0"]
ml = ["xgboost>=2.0"]

[project.scripts]
mf-backtest = "mf_strategy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
